Tax calcualtion is now shown on the Product details page.

--- a/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductCard/Rendering.cshtml
@@ -24,7 +24,7 @@
 		<p class="discount @Model.ProductPriceRenderingViewModel.ProductId" itemprop="discount"></p>
 
 		<p class="item-tax">
-			<small class="tax">Inc. </small>
+			<small class="tax">Incl. </small>
 		</p>
 	</aside>
 
