--- a/src/AvenueClothing.Project.Catalog/Views/ProductPrimaryImage/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductPrimaryImage/Rendering.cshtml
@@ -3,7 +3,7 @@
 	Layout = null;
 }
 
-<div id="product-details" class="row">
+<div class="product-image" class="row">
 	<div class="col-md-5">
 		@Model.PrimaryImage
 	</div>
