--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -438,7 +438,7 @@ a.col-md-3 {
 
 /* Product Details Page
 -------------------------------------------*/
-#product-details {
+product-image {
 }
 .js-add-to-basket-button {
     width: inherit;
@@ -450,12 +450,12 @@ a.col-md-3 {
 .margin-top-for-price {
     margin-top: 19%;
 }
-    #product-details select option:disabled {
+    product-image select option:disabled {
         font-style: italic;
         color: #dcdcdc;
     }
 
-    #product-details aside .item-price {
+    product-image aside .item-price {
         color: #46a546;
         font-weight: bold;
         font-size: 36px;
@@ -463,7 +463,7 @@ a.col-md-3 {
         margin: 10px 0 0;
     }
 
-    #product-details aside .item-tax {
+    product-image aside .item-tax {
         font-style: italic;
         font-size: 0.9em;
         color: #606060;
@@ -471,45 +471,45 @@ a.col-md-3 {
 
 
 
-        #product-details .rating label {
+        product-image .rating label {
             cursor: pointer;
             float: left;
         }
 
 
-    #product-details .review {
+    product-image .review {
         border-bottom: 1px solid #ddd;
         margin-bottom: 10px;
     }
 
-        #product-details .review .review-stars {
+        product-image .review .review-stars {
             float: left;
             width: 100px;
         }
 
-        #product-details .review .review-headline {
+        product-image .review .review-headline {
             font-weight: bold;
             margin: 0;
         }
 
-        #product-details .review .review-by {
+        product-image .review .review-by {
             font-size: 0.85em;
         }
 
-        #product-details .review .review-comment {
+        product-image .review .review-comment {
             padding-left: 50px;
             background: url(/img/ucommerce/return.png) 15px 15px no-repeat;
             margin: 5px 0;
         }
 
-            #product-details .review .review-comment article,
-            #product-details .review .review-comment header {
+            product-image .review .review-comment article,
+            product-image .review .review-comment header {
                 border-left: 5px solid #4a95c5;
                 padding-left: 10px;
                 min-height: 25px;
             }
 
-            #product-details .review .review-comment header {
+            product-image .review .review-comment header {
                 font-size: 0.85em;
             }
 
@@ -749,4 +749,8 @@ footer {
     border-top: solid #dfdfdf 1px;
     padding-top: 10px;
     margin: 0px 30px 0 30px;
+}
+
+product-image .col-md-5, product-image .col-lg-6 {
+        padding: 0;
 }
