Refactor product page; padding, title and image.

--- a/src/AvenueClothing.Project.Catalog/Views/ProductPage/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductPage/Rendering.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Sitecore.Mvc
 
-<div class="col-lg-6">
-    @Html.Sitecore().Placeholder("left")
-</div>
-<div class="col-lg-6">
-    @Html.Sitecore().Placeholder("right")
+<div class="product-detail">
+    <div class="col-lg-6">
+        @Html.Sitecore().Placeholder("left")
+    </div>
+    <div class="col-lg-6">
+        @Html.Sitecore().Placeholder("right")
+    </div>
 </div>
