--- a/src/AvenueClothing.Project.Catalog/Views/ProductTitle/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/ProductTitle/Rendering.cshtml
@@ -2,5 +2,6 @@
 @{
     Layout = null;
 }
-<h2 itemprop="name">@Model.ProductTitle</h2>
-<hr/>
+<div class="product-title">
+    <h2 itemprop="name">@Model.ProductTitle</h2>
+</div>
