--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -2,15 +2,16 @@
 @using System.Web.Mvc.Html
 @model AvenueClothing.Project.Transaction.ViewModels.BasketRenderingViewModel
 
-    @if (Model.OrderLines.Count == 0)
-    {
-        <div class="alert alert-info">
-            <p>Your cart is empty. Please <a href="/">return to our store and add some items</a>.</p>
-        </div>
-    }
-    else
-    {
-        <table class="table table-striped" id="cart">
+@if (Model.OrderLines.Count == 0)
+{
+    <div class="alert alert-info">
+        <p>Your cart is empty. Please <a href="/">return to our store and add some items</a>.</p>
+    </div>
+}
+else
+{
+    <div class="table-responsive">
+        <table class="table table-striped cart">
             <thead>
                 <tr>
                     <th class="span7">Description</th>
@@ -38,9 +39,9 @@
                                 <span style="text-decoration: line-through" data-price>
                                     @line.Price
                                 </span>
-                                <span data-price-with-discount>
-                                    @line.PriceWithDiscount
-                                </span>
+                                    <span data-price-with-discount>
+                                        @line.PriceWithDiscount
+                                    </span>
                             }
                             else
                             {
@@ -65,32 +66,31 @@
                     </tr>
                 }
                 <tr>
-                    <td rowspan="4"></td>
-                    <td colspan="2" rowspan="4">
+                    <td rowspan="4" colspan="2" class="white-background">
                         <button name="update-basket" id="update-basket" class="btn btn-secondary update-basket js-update-basket" data-remove-orderline-url="@Model.RemoveOrderlineUrl" data-refresh-url="@Model.RefreshUrl" data-cart-container=".cart-container" data-item-total=".item-total" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit"><i class="icon-refresh icon-white"></i>Update</button>
                     </td>
-                    <td>Sub total:</td>
+                    <td colspan="2">Sub total:</td>
                     <td class="money order-subtotal">
                         @Model.SubTotal
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td>VAT:</td>
+                    <td colspan="2">VAT:</td>
                     <td class="money order-tax">
                         @Model.TaxTotal
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td>Discounts:</td>
+                    <td colspan="2">Discounts:</td>
                     <td class="money order-discounts">
                         @Model.DiscountTotal
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td>Order total:</td>
+                    <td colspan="2">Order total:</td>
                     <td class="money order-total">
                         @Model.OrderTotal
                     </td>
@@ -105,4 +105,5 @@
                 <a href="/address"><button type="button" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
             </div>
         </div>
-    }
+    </div>
+}
