--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -100,7 +100,7 @@ else
         </table>
 
 
-        <div class="control-group margin-top">
+        <div class="control-group margin-top margin-bottom">
             <div class="controls">
                 <a href="/address"><button type="button" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
             </div>
