According to Anders the buttons should be green 8-)

--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -133,6 +133,6 @@
         <a href="/payment" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
     </div>
     <div class="col-md-6 no-padding-col">
-        <button name="send-order" type="submit" class="btn btn-primary btn-full-width pull-right">Complete Order <i class="icon-arrow-right icon-white"></i></button>
+        <button name="send-order" type="submit" class="btn btn-success btn-full-width pull-right">Complete Order <i class="icon-arrow-right icon-white"></i></button>
     </div>
 }
