--- a/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/ShippingPicker/Rendering.cshtml
@@ -29,7 +29,7 @@
             <a href="/address" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
         </div>
         <div class="col-md-6 no-padding-col">
-            <input type="submit" class="btn btn-primary btn-full-width pull-right" name="review-product" value="Continue to payment options" />
+            <input type="submit" class="btn btn-success btn-full-width pull-right" name="review-product" value="Continue to payment options" />
         </div>
     }
 
