--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -102,7 +102,7 @@ else
 
         <div class="control-group margin-top margin-bottom">
             <div class="controls">
-                <a href="/address"><button type="button" class="btn btn-primary pull-right" name="review-product">Continue</button></a>
+                <a href="/address"><button type="button" class="btn btn-success pull-right" name="review-product">Continue</button></a>
             </div>
         </div>
     </div>
