--- a/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/PaymentPicker/Rendering.cshtml
@@ -30,7 +30,7 @@
             <a href="/shipping" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
         </div>
         <div class="col-md-6 no-padding-col">
-        <button type="submit" class="btn btn-primary btn-default btn-full-width pull-right" >Continue to order preview</button>
+        <button type="submit" class="btn btn-success btn-default btn-full-width pull-right" >Continue to order preview</button>
         </div>
 
       }
