Made it success again.'

--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -130,7 +130,7 @@
                 <a href="/cart" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
             </div>
             <div class="col-md-6 no-padding-col">
-                <input type="submit" class="btn btn-primary btn-full-width pull-right submit-address" value="Continue to shipping options" />
+                <input type="submit" class="btn btn-success btn-full-width pull-right submit-address" value="Continue to shipping options" />
             </div>
         </div>
     </div>
