--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -15,11 +15,11 @@ else
             <thead>
                 <tr>
                     <th class="span7">Description</th>
-                    <th class="span1 money">Price</th>
-                    <th class="span1 money">VAT</th>
+                    <th class="span2 money">Price</th>
+                    <th class="span2 money">VAT</th>
                     <th class="span2">Quantity</th>
                     <th class="span1"></th>
-                    <th class="span1 money">Total</th>
+                    <th class="span2 money">Total</th>
                     <th class="span1"></th>
                 </tr>
             </thead>
@@ -59,11 +59,11 @@ else
                             @Html.TextBoxFor(model => model.OrderLines[i].Quantity, new { @class = "qty form-control no-padding", data_orderline_id = @Model.OrderLines[i].OrderLineId, data_orderline_qty = @Model.OrderLines[i].Quantity })
                         </td>
                         <td>
-                            <button name="update-basket" id="update-basket" class="btn btn-default update-basket js-update-basket" data-remove-orderline-url="@Model.RemoveOrderlineUrl" data-refresh-url="@Model.RefreshUrl" data-cart-container=".cart-container" data-item-total=".item-total" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit">
+                            <button name="update-basket" id="update-basket" class="btn-none update-basket js-update-basket" data-remove-orderline-url="@Model.RemoveOrderlineUrl" data-refresh-url="@Model.RefreshUrl" data-cart-container=".cart-container" data-item-total=".item-total" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit">
                                 <i class="fa fa-refresh" aria-hidden="true"></i>
                             </button>
                         </td>
-                        <td class="item-total">
+                        <td class="money item-total">
                             @line.Total
                         </td>
                         <td>
