--- a/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Basket/Rendering.cshtml
@@ -14,13 +14,12 @@ else
         <table class="table table-striped cart">
             <thead>
                 <tr>
-                    <th class="span7">Description</th>
-                    <th class="span2 money">Price</th>
-                    <th class="span2 money">VAT</th>
-                    <th class="span2">Quantity</th>
-                    <th class="span1"></th>
-                    <th class="span2 money">Total</th>
-                    <th class="span1"></th>
+                    <th class="span3">Description</th>
+                    <th class="span1 money">Price</th>
+                    <th class="span1 money">VAT</th>
+                    <th class="span1">Quantity</th>
+                    <th class="span1 money">Total</th>
+                    <th class="span05"></th>
                 </tr>
             </thead>
             <tbody>
@@ -56,10 +55,8 @@ else
                             @line.Tax
                         </td>
                         <td>
-                            @Html.TextBoxFor(model => model.OrderLines[i].Quantity, new { @class = "qty form-control no-padding", data_orderline_id = @Model.OrderLines[i].OrderLineId, data_orderline_qty = @Model.OrderLines[i].Quantity })
-                        </td>
-                        <td>
-                            <button name="update-basket" id="update-basket" class="btn-none update-basket js-update-basket" data-remove-orderline-url="@Model.RemoveOrderlineUrl" data-refresh-url="@Model.RefreshUrl" data-cart-container=".cart-container" data-item-total=".item-total" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit">
+                            @Html.TextBoxFor(model => model.OrderLines[i].Quantity, new { @class = "qty form-control inline-block no-padding", data_orderline_id = @Model.OrderLines[i].OrderLineId, data_orderline_qty = @Model.OrderLines[i].Quantity })
+                            <button name="update-basket" id="update-basket" class="btn-none inline-block update-basket js-update-basket" data-remove-orderline-url="@Model.RemoveOrderlineUrl" data-refresh-url="@Model.RefreshUrl" data-cart-container=".cart-container" data-item-total=".item-total" data-line-remove=".line-remove" data-order-subtotal=".order-subtotal" data-order-tax=".order-tax" data-order-discounts=".order-discounts" data-order-total=".order-total" data-basket="@Model" type="submit">
                                 <i class="fa fa-refresh" aria-hidden="true"></i>
                             </button>
                         </td>
@@ -75,28 +72,28 @@ else
                     <td rowspan="4" colspan="3" class="white-background">
                         
                     </td>
-                    <td colspan="2">Sub total:</td>
+                    <td colspan="1">Sub total:</td>
                     <td class="money order-subtotal">
                         @Model.SubTotal
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td colspan="2">VAT:</td>
+                    <td colspan="1">VAT:</td>
                     <td class="money order-tax">
                         @Model.TaxTotal
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Discounts:</td>
+                    <td colspan="1">Discounts:</td>
                     <td class="money order-discounts">
                         @Model.DiscountTotal
                     </td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Order total:</td>
+                    <td colspan="1">Order total:</td>
                     <td class="money order-total">
                         @Model.OrderTotal
                     </td>
