--- a/src/AvenueClothing.Project.Website/Views/Footer/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Footer/Rendering.cshtml
@@ -1,10 +1,9 @@
-﻿<div class="col-sm-6 col-md-6">
-    <p>
-        © <a href="http://ucommerce.dk/" title="The most feature rich e-commerce package for Umbraco" target="_blank">uCommerce ApS</a>
-    </p>
-</div>
-<div class="pull-right col-sm-6 col-md-6">
-    <p>
-        Store demo'd by <a href="http://www.thesitedoctor.co.uk/" title="The Site Doctor - Herefordshire based Web Design, Development and IT Consultancy" target="_blank">The Site Doctor</a> 2012
-    </p>
+﻿<div class="footerAddress">
+    <span itemprop="name" class="fpHighlight">uCommerce Aps</span> -
+    <span itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
+        <span itemprop="streetAddress" class="fpHighlight">Studsgade 29B</span> -
+        <span itemprop="postalCode" class="fpHighlight">8000</span> <span itemprop="addressLocality" class="fpHighlight">Aarhus C</span> -
+        <span itemprop="addressCountry" class="fpHighlight">Denmark</span>
+    </span>
+    <br> Phone <span itemprop="telephone">+45 61 799 997</span> - Email <a href="mailto:info@ucommerce.dk" itemprop="email">info@ucommerce.dk</a>
 </div>
