Added table responsive class.

--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -47,7 +47,7 @@
             </address>
         </div>
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped table-responsive">
         <thead>
             <tr>
                 <th class="span2">Item no. </th>
