--- a/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/BasketPreview/Rendering.cshtml
@@ -128,11 +128,12 @@
             </tr>
         </tbody>
     </table>
-
-    <div class="col-md-6 no-padding-col">
-        <a href="/payment" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
-    </div>
-    <div class="col-md-6 no-padding-col">
-        <button name="send-order" type="submit" class="btn btn-success btn-full-width pull-right">Complete Order <i class="icon-arrow-right icon-white"></i></button>
+    <div class="control-group">
+        <div class="col-md-6 no-padding-col">
+            <a href="/payment" type="submit" class="btn btn-secondary btn-default btn-full-width pull-left">Back</a>
+        </div>
+        <div class="col-md-6 no-padding-col">
+            <button name="send-order" type="submit" class="btn btn-success btn-full-width pull-right">Complete Order <i class="icon-arrow-right icon-white"></i></button>
+        </div>
     </div>
 }
