--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -815,3 +815,9 @@ table thead tr th.span6 {
 .footerAddress {
     text-align: center;
 }
+
+.btn.btn-success:hover {
+    color: #fff;
+    background-color: #449d44;
+    border-color: #419641;
+}
