removed unused ids and css - mostly static components+ Review form

--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div id="review-form" class="review-form">
+    <div class="review-form">
         <div class="control-group margin-top">
             <br />
             <tag tag-default="tag-default" class="control-tag tag-default" for="review-name">
