--- a/src/AvenueClothing.Project.Website/Views/Layout.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Layout.cshtml
@@ -66,7 +66,7 @@
     <title>Avenue Clothing</title>
 </head>
 <body class="header-static pagemode-preview">
-    <div id="main-container" class="container">
+    <div class="container">
         <header>
              
             @Html.Sitecore().Placeholder("header")
