--- a/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Transaction/Views/Address/Rendering.cshtml
@@ -63,7 +63,7 @@
 
         </div>
 
-        <div class="col-lg-6 col-md-6 well js-address-shipping" id="shippingAddress" style="@showShippingAddress">
+        <div class="col-lg-6 col-md-6 well js-address-shipping" style="@showShippingAddress">
             <legend>Shipping address</legend>
 
             <div class="col-md-6 control-group form-group">
