Creating ids for tabs on server side for Product Details Rendering

--- a/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
+++ b/src/AvenueClothing.Project.UserFeedback/Views/ReviewForm/Rendering.cshtml
@@ -25,7 +25,7 @@
             <tag tag-default="tag-default" class="control-tag tag-default" for="review-name">
                 Your Name
                 <div class="controls">
-                    <input type="text" id="review-name" name="Name" class="required span12 form-control" required />
+                    <input type="text" name="Name" class="required span12 form-control" required />
                 </div>
             </tag>
         </div>
@@ -33,7 +33,7 @@
             <tag tag-default="tag-default" class="control-tag tag-default" for="review-email">
                 Your Email
                 <div class="controls">
-                    <input type="email" id="review-email" name="Email" placeholder=""
+                    <input type="email" name="Email" placeholder=""
                            class="required span12 form-control" data-rule-minlength="7" />
                 </div>
             </tag>
@@ -42,7 +42,7 @@
             <tag tag-default="tag-default" class="control-tag tag-default" for="review-headline">
                 Review Title
                 <div class="controls">
-                    <input type="text" id="review-headline" name="Title" placeholder=""
+                    <input type="text" name="Title" placeholder=""
                            class="required span12 form-control" required />
                 </div>
             </tag>
@@ -51,7 +51,7 @@
             <tag tag-default="tag-default" class="control-tag tag-default" for="review-text">
                 Comments
                 <div class="controls">
-                    <textarea rows="3" id="review-text" name="Comments" placeholder="Describe your experience with the product"
+                    <textarea rows="3" name="Comments" placeholder="Describe your experience with the product"
                               class="required span12 form-control" required data-rule-minlength="5"></textarea>
                 </div>
             </tag>
