--- a/src/AvenueClothing.Project.Website/Views/Sidebar Static Content/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Website/Views/Sidebar Static Content/Rendering.cshtml
@@ -24,7 +24,7 @@
 <div class="well sidebar-nav" id="newsletter">
     <h5>Keep up-to-date</h5>
     <p>Sign up to our newsletter.</p>
-    <form action="http://thesitedoctor.createsend.com/t/y/s/xbjtk/" method="post" class="validate" id="newsletter-form">
+    <form action="http://campaign.ucommerce.dk/t/t/s/mnlh/" method="post" class="validate" id="newsletter-form">
         <div class="input-append input-group">
             <input type="email" name="cm-xbjtk-xbjtk" id="xbjtk-xbjtk" class="form-control required email">
             <span class="input-group-btn">
