Added new Commerce Connect controller file and a new view. Both are just copies of the original files for now.

--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -104,7 +104,7 @@ ul.nav.navbar-nav > li > div {
     /*padding: 3px 14px;*/
     /*color: #fff;
         border: 1px solid #59B4EE;
-            background: #59B4EE; /*6dbe78*/*/
+            background: #59B4EE; /*6dbe78*/
 
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
     filter: none;
