Added Abandoned checkout and come back banner.

--- a/src/AvenueClothing.Project.Catalog/Views/BannerMessage/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/BannerMessage/Rendering.cshtml
@@ -1,5 +1,11 @@
 ﻿@model AvenueClothing.Project.Catalog.ViewModels.BannerMessageViewModel
 
-<div class="alert alert-success" role="alert">
-  @Model.Message
+
+<div class="banner-image">
+
+   @Model.Image
+
+    <h2>@Model.Title</h2>
+    <p>@Model.Message</p>
+
 </div>
