--- a/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
+++ b/src/AvenueClothing.Project.Website/Css/uCommerce.demostore.css
@@ -833,3 +833,28 @@ table thead tr th.span6 {
 .table-responsive .span10 { width: 83%; }
 .table-responsive .span11 { width: 91.6%; }
 .table-responsive .span12 { width: 100%; }
+
+
+.banner-image { 
+   position: relative; 
+   width: 100%; 
+   margin-bottom: 1rem;
+}
+
+.banner-image h2 { 
+    position: absolute;
+    top: 80px;
+    left: 0;
+    padding: 20px;
+    width: 70%;
+}
+.banner-image p { 
+    position: absolute;
+    top: 125px;
+    left: 0;
+    padding: 20px;
+    width: 70%;
+}
+    .banner-image img {
+        width: 100%;
+    }
