--- a/src/AvenueClothing.Project.Catalog/Views/Renderings/Searchbar.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/Renderings/Searchbar.cshtml
@@ -1,6 +1,6 @@
-﻿<form id="search-form" class="pull-xs-left form-inline navbar-form" action="/search">
+﻿<form class="pull-xs-left form-inline navbar-form search-form" action="/search">
     <div class="input-append input-group">
-        <input id="site-search" type="text" name="search" class="form-control" placeholder="Search the store" />
+        <input type="text" name="search" class="form-control site-search" placeholder="Search the store" />
         <span class="input-group-btn">
             <button type="submit" class="btn btn-link btn-search">
                 <i class="fa fa-search" aria-hidden="true"></i>
