--- a/src/AvenueClothing.Project.Catalog/Views/CategoryNavigation/Rendering.cshtml
+++ b/src/AvenueClothing.Project.Catalog/Views/CategoryNavigation/Rendering.cshtml
@@ -21,7 +21,7 @@
 }
 @if (Model.Categories.Any())
 {
-	<div class="well sidebar-nav" id="main-nav">
+	<div class="well sidebar-nav main-nav">
 	
 			@DisplayCategories(Model.Categories)
 	</div>
